<resources>
    <string name="app_name">DrinksApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_favorite_drinks">Favorite\nDrinks</string>
    <string name="title_all_drinks">All\ndrinks</string>
    <string name="hint_search_drinks">Search drinks</string>
    <string name="title_drinks_related">Related</string>
    <string name="title_drink_steps">Steps</string>
    <string name="title_drink_ingredients">Ingredients</string>
    <string name="divider_unit_ingredient">-</string>
    <string name="divider_step">-</string>
</resources>