<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.list.ListDrinksFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_search_drinks"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_white_corner_radius"
            android:drawableEnd="@drawable/ic_search_black"
            android:elevation="4dp"
            android:hint="@string/hint_search_drinks"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:inputType="textFilter"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ViewStub
            android:id="@+id/vs_search_drinks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout="@layout/results_search_drinks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search_drinks" />

        <TextView
            android:id="@+id/tv_title_favorite_drinks"
            style="@style/Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title_favorite_drinks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_search_drinks" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorite_drink_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layoutAnimation="@anim/drink_list_item_animation"
            android:minHeight="@dimen/height_drink_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_favorite_drinks" />

        <ProgressBar
            android:id="@+id/pb_favorite_drink_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/rv_favorite_drink_list"
            app:layout_constraintEnd_toEndOf="@+id/rv_favorite_drink_list"
            app:layout_constraintStart_toStartOf="@+id/rv_favorite_drink_list"
            app:layout_constraintTop_toTopOf="@+id/rv_favorite_drink_list" />

        <TextView
            android:id="@+id/tv_title_unfavorite_drinks"
            style="@style/Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title_all_drinks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_favorite_drink_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_unfavorite_drink_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layoutAnimation="@anim/drink_list_item_animation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_unfavorite_drinks" />

        <ProgressBar
            android:id="@+id/pb_unfavorite_drink_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/rv_unfavorite_drink_list"
            app:layout_constraintStart_toStartOf="@+id/rv_unfavorite_drink_list"
            app:layout_constraintTop_toTopOf="@+id/rv_unfavorite_drink_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>