<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.detail.DetailDrinkFragment"
    tools:ignore="ContentDescription">


    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="@dimen/square_size_icon_detail"
        android:layout_height="@dimen/square_size_icon_detail"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:padding="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/abc_vector_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <CheckBox
        android:id="@+id/cb_favorite"
        android:layout_width="@dimen/square_size_icon_detail"
        android:layout_height="@dimen/square_size_icon_detail"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_edit"
        android:layout_width="@dimen/square_size_icon_detail"
        android:layout_height="@dimen/square_size_icon_detail"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_search_black"
        app:layout_constraintEnd_toStartOf="@+id/cb_favorite"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/Title"
        android:layout_width="0dp"
        android:layout_height="@dimen/square_size_icon_detail"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:lines="1"
        android:textAllCaps="true"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="0.5sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/ib_edit"
        app:layout_constraintStart_toEndOf="@+id/ib_back"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="MANHATTAN" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="@dimen/square_size_image_drink_detail"
        android:layout_height="160dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView2"
        style="@style/SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_drink_ingredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_image"
        app:layout_constraintTop_toTopOf="@+id/iv_image" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ingredients"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_image"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RatingBar
        android:id="@+id/rb_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:rating="3"
        android:scaleX=".5"
        android:scaleY=".5"
        android:stepSize="0.5"
        app:layout_constraintEnd_toEndOf="@+id/iv_image"
        app:layout_constraintStart_toStartOf="@+id/iv_image"
        app:layout_constraintTop_toBottomOf="@+id/iv_image" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/mtg_units"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        app:checkedButton="@+id/mb_ml"
        app:layout_constraintEnd_toEndOf="@+id/rv_ingredients"
        app:layout_constraintStart_toStartOf="@+id/rv_ingredients"
        app:layout_constraintTop_toBottomOf="@+id/rv_ingredients"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_ml"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@drawable/bg_toggle_button_selector"
            android:text="ml"
            android:textColor="@drawable/text_toggle_button_selector"
            android:textSize="14sp"
            app:cornerRadius="6dp"
            app:strokeColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_ounces"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@drawable/bg_toggle_button_selector"
            android:text="oz"
            android:textColor="@drawable/text_toggle_button_selector"
            android:textSize="14sp"
            app:cornerRadius="6dp"
            app:strokeColor="@color/black" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/textView3"
        style="@style/SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_drink_steps"
        app:layout_constraintStart_toStartOf="@+id/rb_rating"
        app:layout_constraintTop_toBottomOf="@+id/rb_rating" />

    <TextView
        android:id="@+id/textView4"
        style="@style/SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/title_drinks_related"
        app:layout_constraintBottom_toTopOf="@+id/rv_related"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_related"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_steps"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>